--- a/#src/scss/var.scss
+++ b/#src/scss/var.scss
@@ -32,4 +32,5 @@ $fz-text-desktop: 22px;
     font-size: 35px;
 }
 $fz-text-tablet: 24px;
-$padding-tablet: 40px 30px;
+$padding-tablet: 75px 30px 40px;
+$padding-mobile: 55px 20px 40px 20px;
