--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -126,9 +126,12 @@ body {
                     color: #b0b2b3;
                     font-size: 18px;
                     transition: all 0.7s ease;
+                    position: relative;
+                    overflow: hidden;
                     &:hover {
                         transform: scale(1.3);
                     }
+                    
                 }
             }
         }
@@ -143,7 +146,7 @@ body {
 .hero {
     position: relative;
     background-image: url(../img/background.jpg);
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -717,28 +720,10 @@ and (max-width: 1024px) {
             a {
             width: 100%;
             font-size: 28px;
-            position: relative;
-            overflow: hidden;
             &:hover,
             &:focus {
               outline:0;
               background-color:rgba(0,0,0,0.3);
-            }
-            &:hover span:nth-child(1) {
-                right: 100%;
-                transition: all 2.5s linear;
-            }
-           span {
-                position: absolute;
-                display: block;
-                
-                &:nth-child(1) {
-                    bottom: 0;
-                    right: -100%;
-                    width: 100%;
-                    height: 5px;
-                    background: linear-gradient(270deg, transparent, $border-color);
-                }
             }
           }
         }
